[gd_scene load_steps=7 format=3 uid="uid://ccgvfh3qe76yi"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_6p13g"]
[ext_resource type="Texture2D" uid="uid://0hirgy8hc1bh" path="res://thumb_wood-109v2-256x256.jpg" id="4_wo8th"]
[ext_resource type="PackedScene" uid="uid://hey6yq5cfrcj" path="res://Score.tscn" id="5_3grd1"]
[ext_resource type="PackedScene" uid="uid://bb0erhooyu7aj" path="res://character.tscn" id="5_8ajps"]

[sub_resource type="GDScript" id="GDScript_ki3ur"]
script/source = "extends Sprite2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	set_process_input(true)
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta: float) -> void:
	## position += Vector2(0, 100 * delta)
	#
	#if Input.is_key_pressed(KEY_D):
		#position += Vector2(200 * delta, 0)
	#if Input.is_key_pressed(KEY_W):
		#position += Vector2(0, -200 * delta)
	#if Input.is_key_pressed(KEY_S):
		#position += Vector2(0, 200 * delta)
	#if Input.is_key_pressed(KEY_A):
		#position += Vector2(-200 * delta, 0)
	#
	#if (position.y >= 0):
		#position.y = 0
	#pass
"

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_u0j7i"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6p13g")
CharacterScene = ExtResource("5_8ajps")

[node name="Background" type="ColorRect" parent="."]
offset_left = -75.0
offset_top = -687.0
offset_right = -35.0
offset_bottom = -647.0
scale = Vector2(31.9416, 19.9469)
color = Color(0.105882, 0.584314, 0.784314, 1)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://character.tscn")
spawn_path = NodePath("..")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Jan2" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(452, 225)
scale = Vector2(4.48438, 1)
texture = ExtResource("4_wo8th")
centered = false
offset = Vector2(-100, -220)
script = SubResource("GDScript_ki3ur")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(571, 14)
shape = SubResource("WorldBoundaryShape2D_u0j7i")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(1161, -599)
rotation = -3.14159

[node name="Jan2" type="Sprite2D" parent="StaticBody2D2"]
position = Vector2(452, 225)
scale = Vector2(4.48438, 1)
texture = ExtResource("4_wo8th")
centered = false
offset = Vector2(-100, -220)
script = SubResource("GDScript_ki3ur")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(571, 14)
shape = SubResource("WorldBoundaryShape2D_u0j7i")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(1133, 124)
rotation = -1.5708

[node name="Jan2" type="Sprite2D" parent="StaticBody2D3"]
position = Vector2(452, 225)
scale = Vector2(4.48438, 1)
texture = ExtResource("4_wo8th")
centered = false
offset = Vector2(-100, -220)
script = SubResource("GDScript_ki3ur")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(571, 14)
shape = SubResource("WorldBoundaryShape2D_u0j7i")

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(33, -930)
rotation = 1.5708

[node name="Jan2" type="Sprite2D" parent="StaticBody2D4"]
position = Vector2(452, 225)
scale = Vector2(4.48438, 1)
texture = ExtResource("4_wo8th")
centered = false
offset = Vector2(-100, -220)
script = SubResource("GDScript_ki3ur")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2(571, 14)
shape = SubResource("WorldBoundaryShape2D_u0j7i")

[node name="Score" parent="." instance=ExtResource("5_3grd1")]
position = Vector2(59, -576)
scale = Vector2(4.33202, 4.33202)

[node name="HostButton" type="Button" parent="."]
offset_left = 1085.0
offset_top = -536.0
offset_right = 1129.0
offset_bottom = -505.0
text = "Host"

[node name="JoinButton" type="Button" parent="."]
offset_left = 1089.0
offset_top = -497.0
offset_right = 1127.0
offset_bottom = -466.0
text = "Join"

[node name="NameField" type="TextEdit" parent="."]
offset_left = 931.0
offset_top = -598.0
offset_right = 1131.0
offset_bottom = -548.0
theme_override_font_sizes/font_size = 25
placeholder_text = "Name"

[node name="Label" type="Label" parent="."]
offset_left = 881.0
offset_top = -538.0
offset_right = 981.0
offset_bottom = -515.0
text = "Skin Selector"

[node name="Skins" type="GridContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 864.0
offset_top = -510.0
offset_right = 1068.0
offset_bottom = -306.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
columns = 2

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
